--- a/src/C195/updateAppointment.fxml
+++ b/src/C195/updateAppointment.fxml
@@ -1,9 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="566.0" prefWidth="854.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="C195.UpdateAppointmentController">
-    <Button layoutX="495.0" layoutY="513.0" mnemonicParsing="false" onAction="#goToMainMenuWindow" text="Go To Main Menu" />
-   <Button layoutX="650.0" layoutY="513.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="159.0" text="Update Appointment" />
+<AnchorPane prefHeight="936.0" prefWidth="1302.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="C195.UpdateAppointmentController">
+
+    <Button layoutX="724.0" layoutY="767.0" mnemonicParsing="false" onAction="#goToMainMenuWindow" text="Go To Main Menu" />
+   <Button layoutX="997.0" layoutY="767.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="159.0" text="Update Appointment" />
+   <Label layoutX="590.0" layoutY="27.0" text="Update Appointment" />
+   <Label fx:id="apptIDLabel" layoutX="68.0" layoutY="85.0" text="Appointment ID" />
+   <Label layoutX="70.0" layoutY="164.0" text="Title" />
+   <Label layoutX="68.0" layoutY="261.0" text="Description" />
+   <Label layoutX="68.0" layoutY="346.0" text="Location" />
+   <Label layoutX="69.0" layoutY="432.0" text="Type" />
+   <Label layoutX="403.0" layoutY="86.0" text="Start" />
+   <Label layoutX="360.0" layoutY="224.0" text="End" />
+   <Label layoutX="380.0" layoutY="364.0" text="Created" />
+   <Label layoutX="371.0" layoutY="441.0" text="Created By" />
+   <Label layoutX="698.0" layoutY="87.0" text="Last Update" />
+   <Label layoutX="713.0" layoutY="174.0" text="Last Updated By" />
+    <DatePicker fx:id="updateAppointmentStartDate" layoutX="357.0" layoutY="108.0" promptText="Start" />
+    <DatePicker fx:id="updateAppointmentEndDate" layoutX="351.0" layoutY="248.0" promptText="End" />
+   <Label layoutX="1078.0" layoutY="78.0" text="Customer" />
+   <Label layoutX="1101.0" layoutY="165.0" text="User" />
+   <Label layoutX="1092.0" layoutY="265.0" text="Contact" />
+   <ComboBox fx:id="customerCombo" layoutX="1076.0" layoutY="119.0" prefWidth="150.0" promptText="Customer" />
+   <ComboBox fx:id="userCombo" layoutX="1076.0" layoutY="206.0" prefWidth="150.0" promptText="User" />
+   <ComboBox fx:id="contactCombo" layoutX="1076.0" layoutY="307.0" prefWidth="150.0" promptText="Contact" />
+   <TextField fx:id="startTimeField" layoutX="356.0" layoutY="170.0" promptText="HH:MM" />
+   <TextField fx:id="endTimeField" layoutX="351.0" layoutY="319.0" promptText="HH:MM" />
+   <Label layoutX="356.0" layoutY="156.0" text="Start Time HH:MM" />
+   <Label layoutX="356.0" layoutY="297.0" text="End Time HH:MM" />
+   <TextField fx:id="titleField" layoutX="40.0" layoutY="194.0" promptText="Title" />
+   <TextField fx:id="descriptionField" layoutX="34.0" layoutY="294.0" promptText="Description" />
+   <TextField fx:id="locationField" layoutX="34.0" layoutY="382.0" promptText="Location" />
+   <TextField fx:id="typeField" layoutX="22.0" layoutY="468.0" promptText="Type" />
+   <TextField fx:id="createDateField" layoutX="337.0" layoutY="396.0" promptText="Created Date" />
+   <TextField fx:id="createdByField" layoutX="333.0" layoutY="469.0" promptText="Created By" />
+   <TextField fx:id="lastUpdateDateField" layoutX="681.0" layoutY="119.0" promptText="Last Update Date" />
+   <TextField fx:id="lastUpdatedByField" layoutX="681.0" layoutY="212.0" promptText="Last Updated By" />
+   <Label fx:id="updateApptErrorField" layoutX="688.0" layoutY="487.0" prefHeight="58.0" prefWidth="434.0" />
 </AnchorPane>
